Fix collapse sidebar for 6/18/2020 release (#1938)

--- a/src/extension/features/general/collapse-side-menu/index.css
+++ b/src/extension/features/general/collapse-side-menu/index.css
@@ -6,11 +6,6 @@
   width: 4.6rem;
 }
 
-.layout.collapsed .content,
-.layout.collapsed .budget-header {
-  left: 40px;
-}
-
 .layout.collapsed .content .scroll-wrap,
 .layout.collapsed .content .register-flex-columns {
   width: inherit;
